# lastra-py

./: .gitignore  CHANGELOG.md  FORMAT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
lastra/: __init__.py  _descriptor.py  format.py  reader.py  writer.py
lastra/adapters/: __init__.py  _common.py  arrow.py  pandas.py  polars.py
lastra/codecs/: __init__.py  _pongo_eraser.py  alp.py  delta_varint.py  gorilla.py  pongo.py  raw.py  varlen.py
tests/: test_adapter_arrow.py  test_adapter_pandas.py  test_adapter_polars.py  test_codec_alp.py  test_codec_delta_varint.py  test_codec_gorilla.py  test_codec_pongo.py  test_codec_raw.py  test_codec_varlen.py  test_compat_java.py  test_descriptor.py  test_format.py  test_reader_compat.py  test_smoke.py  test_writer_roundtrip.py
tests/fixtures/: lastra_row_groups.lastra  lastra_ticker.lastra  lastra_with_events.lastra
