[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lastra"
version = "0.8.1"
description = "Python reader/writer for the Lastra columnar time series format. Bit-exact compatible with QTSurfer/lastra-java + lastra-ts."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Wualabs LTD" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = [
    "alp-codec>=0.8",
    "numpy>=1.26",
    "zstandard>=0.22",
]
keywords = ["lastra", "columnar", "time-series", "compression", "ohlcv", "tick-data"]

[project.urls]
Homepage = "https://github.com/QTSurfer/lastra-py"
Documentation = "https://github.com/QTSurfer/lastra-py#readme"
"Format spec" = "https://github.com/QTSurfer/lastra-py/blob/main/FORMAT.md"
Repository = "https://github.com/QTSurfer/lastra-py"
Issues = "https://github.com/QTSurfer/lastra-py/issues"
"Reference (Java)" = "https://github.com/QTSurfer/lastra-java"
"Reference (TS)" = "https://github.com/QTSurfer/lastra-ts"

[project.optional-dependencies]
pandas = ["pandas>=2.2"]
polars = ["polars>=1.0"]
arrow = ["pyarrow>=18"]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["lastra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
